--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,314 @@
 <!doctype html>
-<html lang="es" class="h-full">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maze Champions - Plataforma de Competición</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { box-sizing: border-box; }
-        .maze-pattern {
-            background-image:
-                linear-gradient(90deg, rgba(59, 130, 246, 0.1) 1px, transparent 1px),
-                linear-gradient(rgba(59, 130, 246, 0.1) 1px, transparent 1px);
-            background-size: 20px 20px;
+        /* --- Reset y Estilos Base --- */
+        :root {
+            --primary-color: #3b82f6;
+            --secondary-color: #8b5cf6;
+            --green-color: #10b981;
+            --red-color: #ef4444;
+            --text-dark: #1f2937;
+            --text-light: #6b7280;
+            --bg-light: #f9fafb;
+            --border-color: #e5e7eb;
         }
-        .glow-effect { box-shadow: 0 0 20px rgba(59, 130, 246, 0.3); }
-        .competition-card { transition: all 0.3s ease; }
-        .competition-card:hover { transform: translateY(-5px); box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15); }
-        .loading-spinner { border: 3px solid #f3f4f6; border-top: 3px solid #3b82f6; border-radius: 50%; width: 20px; height: 20px; animation: spin 1s linear infinite; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        .toast { position: fixed; top: 20px; right: 20px; z-index: 1000; padding: 12px 24px; border-radius: 8px; color: white; font-weight: 500; transform: translateX(120%); transition: transform 0.3s ease; }
-        .toast.show { transform: translateX(0); }
-        .toast.success { background-color: #10b981; }
-        .toast.error { background-color: #ef4444; }
+        html {
+            height: 100%;
+        }
+        body {
+            height: 100%;
+            margin: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
+            background: linear-gradient(to bottom right, #eff6ff, #e0e7ff);
+            color: var(--text-dark);
+        }
+        .main-container {
+            max-width: 1280px;
+            margin: 0 auto;
+            padding: 2rem 1rem;
+        }
 
-        /* ESTILOS PARA EL LABERINTO */
-        #box { margin: 20px auto; }
-        .mrow { height: auto; width: auto; clear: both; }
-        .cell { float: left; border-style: solid; border-width: 0; border-color: #3b82f6; }
+        /* --- Estilos del Laberinto y Juego --- */
+        #game-container {
+            text-align: center;
+            background-color: white;
+            padding: 2rem;
+            border-radius: 1rem;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+        }
+        #box {
+            margin: 20px auto;
+            position: relative; /* Para posicionar los avatares */
+        }
+        .mrow {
+            height: auto;
+            width: auto;
+            clear: both;
+        }
+        .cell {
+            float: left;
+            border-style: solid;
+            border-width: 0;
+            border-color: var(--primary-color);
+        }
         .top { border-top-width: 1px; }
         .bottom { border-bottom-width: 1px; }
         .left { border-left-width: 1px; }
         .right { border-right-width: 1px; }
-        #game-container { text-align: center; background-color: white; padding: 2rem; border-radius: 1rem; box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
-        .player-avatar { position: absolute; border-radius: 50%; transition: all 0.1s linear; box-shadow: 0 0 8px rgba(0,0,0,0.5); border: 2px solid white; }
+        .player-avatar {
+            position: absolute;
+            border-radius: 50%;
+            transition: all 0.1s linear;
+            box-shadow: 0 0 8px rgba(0,0,0,0.5);
+            border: 2px solid white;
+        }
+        .winner-overlay {
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background-color: rgba(255, 255, 255, 0.9);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+            font-weight: bold;
+            color: #1e40af;
+            text-align: center;
+            border-radius: 1rem;
+        }
+        .winner-overlay button {
+             margin-top: 1rem;
+        }
+
+        /* --- Componentes UI --- */
+        .header {
+            background-color: white;
+            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+            border-bottom: 4px solid var(--primary-color);
+            padding: 1.5rem 0;
+        }
+        .header-content {
+            max-width: 1280px;
+            margin: 0 auto;
+            padding: 0 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .header-logo {
+            display: flex;
+            align-items: center;
+        }
+        .header-logo .icon {
+            width: 3rem;
+            height: 3rem;
+            background: linear-gradient(to bottom right, var(--primary-color), var(--secondary-color));
+            border-radius: 0.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 1rem;
+        }
+        .header-logo h1 {
+            font-size: 1.875rem;
+            font-weight: bold;
+            margin: 0;
+        }
+        .header-logo p {
+            color: var(--text-light);
+            margin: 0;
+        }
+
+        .card {
+            background-color: white;
+            border-radius: 0.75rem;
+            box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1);
+            padding: 2rem;
+            margin-bottom: 2rem;
+            text-align: center;
+        }
+        .glow-effect {
+            box-shadow: 0 0 20px rgba(59, 130, 246, 0.3);
+        }
+        .card h2 {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+        .card p {
+            color: var(--text-light);
+            max-width: 42rem; /* 2xl */
+            margin: 0 auto;
+        }
+
+        .form-container {
+            max-width: 28rem; /* md */
+            margin: 2rem auto 0;
+        }
+        .form-group {
+            margin-bottom: 1rem;
+            text-align: left;
+        }
+        .form-group label {
+            display: block;
+            font-size: 0.875rem;
+            font-weight: 500;
+            color: #374151;
+            margin-bottom: 0.5rem;
+        }
+        .form-input {
+            width: 100%;
+            padding: 0.75rem 1rem;
+            border: 1px solid var(--border-color);
+            border-radius: 0.5rem;
+            box-sizing: border-box; /* Importante para el padding */
+        }
+        .form-input:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
+        }
+
+        .competition-grid {
+            display: grid;
+            gap: 1.5rem;
+        }
+        @media (min-width: 768px) {
+            .competition-grid {
+                grid-template-columns: repeat(1, 1fr); /* 1 columna en md */
+            }
+        }
+        .competition-card {
+            background: white;
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);
+            padding: 1.5rem;
+            border-left: 4px solid var(--green-color);
+            transition: all 0.3s ease;
+            text-align: left;
+        }
+        .competition-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+        }
+        .competition-card-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 1rem;
+        }
+        .competition-card-icon {
+            width: 3rem;
+            height: 3rem;
+            background-color: #d1fae5;
+            border-radius: 0.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 1rem;
+            font-size: 1.5rem;
+        }
+        .competition-card-header h3 {
+            font-size: 1.25rem;
+            font-weight: bold;
+            margin: 0;
+        }
+        .competition-card-header p {
+            color: var(--text-light);
+            font-size: 0.875rem;
+            margin: 0;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            color: white;
+            background-color: var(--green-color);
+            border: none;
+            border-radius: 0.5rem;
+            font-weight: 500;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.2s;
+        }
+        .button:hover {
+            background-color: #059669;
+        }
+        .button:disabled {
+            background-color: #9ca3af;
+            cursor: not-allowed;
+        }
+        .competition-card-footer {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-top: 1rem;
+        }
+
+        /* --- Utilidades --- */
+        .toast {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 1000;
+            padding: 12px 24px;
+            border-radius: 8px;
+            color: white;
+            font-weight: 500;
+            transform: translateX(120%);
+            transition: transform 0.3s ease;
+        }
+        .toast.show { transform: translateX(0); }
+        .toast.success { background-color: var(--green-color); }
+        .toast.error { background-color: var(--red-color); }
     </style>
 </head>
-<body class="h-full bg-gradient-to-br from-blue-50 to-indigo-100 maze-pattern">
-    <div class="min-h-full">
-        <header class="bg-white shadow-lg border-b-4 border-blue-500">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex justify-between items-center py-6">
-                    <div class="flex items-center space-x-4">
-                        <div class="w-12 h-12 bg-gradient-to-br from-blue-500 to-purple-600 rounded-lg flex items-center justify-center">
-                            <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 20l-5.447-2.724A1 1 0 013 16.382V5.618a1 1 0 011.447-.894L9 7m0 13l6-3m-6 3V7m6 10l4.553 2.276A1 1 0 0021 18.382V7.618a1 1 0 00-.553-.894L15 4m0 13V4m0 0L9 7"></path></svg>
-                        </div>
-                        <div><h1 id="platform-title" class="text-3xl font-bold text-gray-900">Maze Champions</h1><p id="welcome-message" class="text-gray-600">¡Bienvenido a la competición de laberintos definitiva!</p></div>
-                    </div>
+<body>
+    <header class="header">
+        <div class="header-content">
+            <div class="header-logo">
+                <div class="icon">
+                    <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="width: 2rem; height: 2rem; color: white;"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 20l-5.447-2.724A1 1 0 013 16.382V5.618a1 1 0 011.447-.894L9 7m0 13l6-3m-6 3V7m6 10l4.553 2.276A1 1 0 0021 18.382V7.618a1 1 0 00-.553-.894L15 4m0 13V4m0 0L9 7"></path></svg>
+                </div>
+                <div>
+                    <h1>Maze Champions</h1>
+                    <p>¡Bienvenido a la competición de laberintos definitiva!</p>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
 
-        <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-            <div class="bg-white rounded-xl shadow-lg p-8 mb-8 glow-effect">
-                <div class="text-center mb-8"><h2 class="text-2xl font-bold text-gray-900 mb-4">🏆 Únete a la Competición</h2><p class="text-gray-600 max-w-2xl mx-auto">Ingresa tu nombre y busca un rival para competir en un duelo 1 vs 1 en tiempo real.</p></div>
-                <form id="registration-form" class="max-w-md mx-auto space-y-4" onsubmit="return false;">
-                    <div><label for="player-name" class="block text-sm font-medium text-gray-700 mb-2">Nombre del Jugador</label><input type="text" id="player-name" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Ingresa tu nombre"></div>
-                </form>
-            </div>
-            <div class="grid md:grid-cols-1 gap-6 mb-8">
-                <div class="competition-card bg-white rounded-xl shadow-lg p-6 border-l-4 border-green-500">
-                    <div class="flex items-center mb-4">
-                        <div class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mr-4"><span class="text-2xl">⚔️</span></div>
-                        <div><h3 class="text-xl font-bold text-gray-900">Duelo 1v1</h3><p class="text-sm text-gray-600">Competición directa</p></div>
+    <main class="main-container">
+        <div class="card glow-effect">
+            <h2>🏆 Únete a la Competición</h2>
+            <p>Ingresa tu nombre y busca un rival para competir en un duelo 1 vs 1 en tiempo real.</p>
+            <form class="form-container" onsubmit="return false;">
+                <div class="form-group">
+                    <label for="player-name">Nombre del Jugador</label>
+                    <input type="text" id="player-name" required class="form-input" placeholder="Ingresa tu nombre">
+                </div>
+            </form>
+        </div>
+        <div class="competition-grid">
+            <div class="competition-card">
+                <div class="competition-card-header">
+                    <div class="competition-card-icon"><span>⚔️</span></div>
+                    <div>
+                        <h3>Duelo 1v1</h3>
+                        <p>Competición directa</p>
                     </div>
-                    <p class="text-gray-700 mb-4">Enfréntate cara a cara contra otro jugador. ¡El primero en llegar a la meta gana!</p>
-                    <div class="flex justify-end items-center"><button id="find-rival-btn" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition-colors"> Buscar Rival </button></div>
+                </div>
+                <p>Enfréntate cara a cara contra otro jugador. ¡El primero en llegar a la meta gana!</p>
+                <div class="competition-card-footer">
+                    <button id="find-rival-btn" class="button">Buscar Rival</button>
                 </div>
             </div>
-        </main>
-    </div>
-    
+        </div>
+    </main>
+
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
@@ -105,9 +344,9 @@
             const mainContent = document.querySelector('main');
             mainContent.innerHTML = `
                 <div id="game-container">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Partida iniciada!</h2>
-                    <p class="text-gray-600 mb-4">${gameData.players[0].name} vs ${gameData.players[1].name}</p>
-                    <div id="box" style="position: relative;"></div>
+                    <h2>Partida iniciada!</h2>
+                    <p>${gameData.players[0].name} vs ${gameData.players[1].name}</p>
+                    <div id="box"></div>
                 </div>`;
             renderMazeFromServer(gameData.maze);
             createPlayerAvatars();
@@ -131,8 +370,8 @@
             const gameContainer = document.getElementById('game-container');
             if (!gameContainer) return;
             const winnerDisplay = document.createElement('div');
-            winnerDisplay.style.cssText = `position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(255, 255, 255, 0.9); display: flex; flex-direction: column; justify-content: center; align-items: center; font-size: 2rem; font-weight: bold; color: #1e40af; text-align: center; border-radius: 1rem;`;
-            winnerDisplay.innerHTML = `<p>${message}</p><button onclick="window.location.reload()" class="mt-4 px-4 py-2 bg-blue-500 text-white rounded-lg text-base font-semibold">Jugar de Nuevo</button>`;
+            winnerDisplay.className = 'winner-overlay';
+            winnerDisplay.innerHTML = `<p>${message}</p><button onclick="window.location.reload()" class="button">Jugar de Nuevo</button>`;
             gameContainer.style.position = 'relative';
             gameContainer.appendChild(winnerDisplay);
         });
@@ -213,7 +452,6 @@
          *******************************************************/
         var rows, columns, box;
         var above = 0, below = 1, left = 2, right = 3;
-        var classAttr = "class";
 
         function renderMazeFromServer(mazeData) {
             rows = mazeData.rows;
@@ -223,10 +461,6 @@
 
             box.style.width = (columns * CELL_SIZE) + 'px';
             box.style.height = (rows * CELL_SIZE) + 'px';
-
-            const style = document.createElement('style');
-            style.innerHTML = `.cell { height: ${CELL_SIZE}px; width: ${CELL_SIZE}px; }`;
-            document.head.appendChild(style);
             
             builder(mazeData);
         }
@@ -240,7 +474,7 @@
 
         function mazeRowBuilder(maze, token, y) {
             var row = document.createElement("div");
-            row.setAttribute(classAttr, "mrow");
+            row.className = "mrow";
             token.appendChild(row);
             for (let x = 0; x < columns; x++) { mazeCellBuilder(maze, row, x, y); }
         }
@@ -258,7 +492,7 @@
             if (wall[below]) classes += " bottom";
             if (wall[left])  classes += " left";
             if (wall[right]) classes += " right";
-            div.setAttribute(classAttr, classes);
+            div.className = classes;
             return div;
         }
     </script>
